<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.zhm.weather.TodayFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:background="@color/Light_Blue"
        >
        <LinearLayout
            android:id="@+id/ll_main_choose_city"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:textSize="18dp"
                android:text="@string/chooes_city"
                android:gravity="center"
                android:textColor="@color/White"/>
            <TextView
                android:id="@+id/tv_mian_show_city"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:text="@string/choose"
                android:gravity="center"
                android:textColor="@color/Red_Gray"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tv_halving"
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:background="@color/Gray1"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
             />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/tv_halving"
            android:layout_alignStart="@+id/tv_halving"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="18dp"
                android:text="@string/data"
                android:gravity="center"
                android:layout_marginLeft="15dp"
                android:textColor="@color/White"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:textSize="18dp"
                android:text="@string/today"
                android:textColor="@color/Red_Gray"
                android:gravity="center"/>

        </LinearLayout>
        <TextView
            android:id="@+id/tv_mian_load_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="12dp"
            android:text="@string/mare"
            android:textColor="@color/yellow"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
       <LinearLayout
           android:orientation="vertical"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:background="@drawable/bg_color">
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="170dp"
               android:orientation="vertical"
               android:background="@mipmap/now_bg">
               <com.carlosyzy.weather.View.MyImageView
                   android:id="@+id/iv_weather_icon"
                   android:layout_width="80dp"
                   android:layout_height="80dp"
                   android:layout_marginTop="15dp"
                   android:layout_gravity="center_horizontal"
                   />
               <LinearLayout
                   android:layout_width="wrap_content"
                   android:orientation="horizontal"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center"
                   android:layout_marginTop="15dp">
                   <TextView
                       android:id="@+id/tv_tody_now_city"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textSize="18dp"
                       android:textStyle="bold"/>
               </LinearLayout>
               <LinearLayout
                   android:layout_width="wrap_content"
                   android:orientation="horizontal"
                   android:layout_height="35dp"
                   android:layout_gravity="center"
                   android:layout_marginTop="10dp">
                   <TextView
                       android:id="@+id/tv_tody_timp"
                       android:layout_width="wrap_content"
                       android:layout_height="35dp"
                       android:textStyle="bold"
                       android:textSize="18dp"
                       android:text=""/>
                   <TextView
                       android:id="@+id/tv_tody_wind_direction"
                       android:layout_width="wrap_content"
                       android:layout_height="35dp"
                       android:layout_marginLeft="50dp"
                       android:textStyle="bold"
                       android:textSize="18dp"/>
                   <TextView
                       android:id="@+id/tv_tody_wind_strength"
                       android:layout_width="wrap_content"
                       android:layout_height="35dp"
                       android:layout_marginLeft="50dp"
                       android:textStyle="bold"
                       android:textSize="18dp"/>
               </LinearLayout>
           </LinearLayout>
           <TextView
               android:layout_width="match_parent"
               android:layout_height="1dp"
               android:background="@color/Gray"/>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">
               <RelativeLayout
                   android:layout_marginTop="10dp"
                   android:layout_width="match_parent"
                   android:layout_height="30dp">
                   <TextView
                       android:id="@+id/tv_tody_city"
                       android:layout_width="wrap_content"
                       android:layout_height="30dp"
                       android:textSize="20dp"
                       android:text=""
                       android:layout_marginLeft="20dp"
                       android:textColor="@color/Gray"/>
                   <TextView
                       android:id="@+id/tv_tody_data_y"
                       android:layout_width="wrap_content"
                       android:layout_height="30dp"
                       android:textSize="20dp"
                       android:text=""
                       android:layout_centerInParent="true"
                       android:textColor="@color/Gray"/>
                   <TextView
                       android:id="@+id/tv_tody_week"
                       android:layout_width="wrap_content"
                       android:layout_height="30dp"
                       android:textSize="20dp"
                       android:text=""
                       android:layout_alignParentRight="true"
                       android:layout_marginRight="20dp"
                       android:textColor="@color/Gray"/>
               </RelativeLayout>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="1dp"
                   android:background="@color/White"
                   android:layout_marginLeft="10dp"
                   android:layout_marginRight="10dp"/>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/today_details"
                   android:layout_marginLeft="15dp"
                   android:layout_marginTop="15dp"/>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">
                   <ImageView
                       android:id="@+id/iv_today_weather_icon"
                       android:layout_width="150dp"
                       android:layout_height="150dp"
                       android:background="@mipmap/cloudy"
                       android:layout_marginLeft="20dp"
                       android:layout_marginTop="20dp"
                       />
                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="vertical"
                       android:layout_marginTop="20dp"
                       android:layout_marginLeft="10dp">
                       <LinearLayout
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:orientation="horizontal"
                           android:layout_marginTop="15dp">
                           <TextView
                               android:layout_width="70dp"
                               android:textSize="16dp"
                               android:textColor="@color/yellow"
                               android:layout_height="wrap_content"
                               android:text="@string/today_weather"/>
                           <ImageView
                               android:layout_width="match_parent"
                               android:layout_height="match_parent"
                               android:layout_weight="1"
                               android:background="@mipmap/line_x"/>
                           <TextView
                               android:id="@+id/tv_today_weather"
                               android:layout_width="85dp"
                               android:layout_height="wrap_content"
                               android:gravity="center"/>
                       </LinearLayout>
                       <LinearLayout
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:orientation="horizontal"
                           android:layout_marginTop="15dp">
                           <TextView
                               android:textSize="16dp"
                               android:textColor="@color/yellow"
                               android:layout_width="70dp"
                               android:layout_height="wrap_content"
                               android:text="@string/temperture"/>
                           <ImageView
                               android:layout_width="match_parent"
                               android:layout_height="match_parent"
                               android:layout_weight="1"
                               android:background="@mipmap/line_x"/>
                           <TextView
                               android:id="@+id/tv_today_temperature"
                               android:layout_width="80dp"
                               android:layout_height="wrap_content"
                               android:gravity="center"/>
                       </LinearLayout>
                       <LinearLayout
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:orientation="horizontal"
                           android:layout_marginTop="15dp">
                           <TextView
                               android:textSize="16dp"
                               android:textColor="@color/yellow"
                               android:layout_width="70dp"
                               android:layout_height="wrap_content"
                               android:text="@string/humidity"/>
                           <ImageView
                               android:layout_width="match_parent"
                               android:layout_height="match_parent"
                               android:layout_weight="1"
                               android:background="@mipmap/line_x"/>
                           <TextView
                               android:id="@+id/tv_today_wind"
                               android:layout_width="80dp"
                               android:layout_height="wrap_content"
                               android:gravity="center"/>
                       </LinearLayout>
                       <LinearLayout
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:orientation="horizontal"
                           android:layout_marginTop="15dp"
                           >
                           <TextView
                               android:textSize="16dp"
                               android:textColor="@color/yellow"
                               android:layout_width="70dp"
                               android:layout_height="wrap_content"
                               android:text="@string/wind"/>
                               <ImageView
                                   android:layout_width="match_parent"
                                   android:layout_height="match_parent"
                                   android:layout_weight="1"
                                   android:background="@mipmap/line_x"/>
                           <TextView
                               android:id="@+id/tv_today_humidity"
                               android:layout_width="80dp"
                               android:layout_height="wrap_content"
                               android:gravity="center"/>
                       </LinearLayout>
                   </LinearLayout>
               </LinearLayout>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="1dp"
                   android:background="@color/White"
                   android:layout_marginLeft="10dp"
                   android:layout_marginRight="10dp"
                   android:layout_marginTop="10dp"/>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/warn"
                   android:layout_marginLeft="15dp"
                   android:layout_marginTop="15dp"/>
               <TextView
                   android:id="@+id/tv_today_warn"
                   android:layout_marginTop="15dp"
                   android:layout_marginLeft="20dp"
                   android:layout_marginRight="20dp"
                   android:layout_width="match_parent"
                   android:layout_height="200dp"
                   android:textSize="18dp"
                   android:textColor="@color/yellow"/>
           </LinearLayout>
       </LinearLayout>
    </ScrollView>
</LinearLayout>
